policytests/calicopolicy.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  annotations: {source: Policy enforced by <REF> cybersecurity}
  name: test-app-polies
  namespace: test
spec:
  egress:
  - action: Allow
    destination:
      ports: [8080]
      serviceAccounts: {}
    protocol: TCP
  - action: Allow
    destination:
      ports: [8080]
      serviceAccounts: {}
    protocol: UDP
  ingress:
  - action: Allow
    destination: {}
    source:
      namespaceSelector: zone == "test2"
      serviceAccounts: {}
  order: 700
  selector: all()
  types: [Ingress, Egress]

---
