policytests/passpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  annotations: {source: Policy enforced by <REF> cybersecurity}
  name: test-app-polies
  namespace: test
spec:
  egress:
  - action: Allow
    destination:
      ports: [8080]
      serviceAccounts: {}
    protocol: TCP
  - action: Allow
    destination:
      ports: [8080]
      serviceAccounts: {}
    protocol: UDP
  ingress:
  - action: Allow
    destination: {}
    source:
      namespaceSelector: zone == "test1"
      serviceAccounts: {}
  order: 300
  selector: all()
  types: [Ingress, Egress]

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  annotations: {source: Policy enforced by <REF> cybersecurity}
  name: default-deny-cluster
  namespace: test
spec:
  order: 1000
  types: [Ingress, Egress]
  selector: all()

---
